<project 
	xmlns="http://maven.apache.org/POM/4.0.0" 
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.dms.devops</groupId>
	<artifactId>ms_orders</artifactId>
	<version>3.5.2</version>
	<packaging>jar</packaging>

	<parent>
		<groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>1.5.8.RELEASE</version>
	</parent>

	<dependencies>
	
		<!-- Web Frameworks -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jersey</artifactId>
		</dependency>
		<!-- ./Web Frameworks -->

		<!-- Testing -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- ./Testing -->

		<!-- Logging -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jul-to-slf4j</artifactId>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>log4j-over-slf4j</artifactId>
		</dependency>
		<!-- ./Logging -->

	</dependencies>

	<properties>
        <java.version>1.8</java.version>
		<tomcat.version>8.5.23</tomcat.version>
        <com.squareup.okhttp3.version>3.4.1</com.squareup.okhttp3.version>
    </properties>

	<build>

		<plugins>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
	                <archive>
	                    <index>true</index>
	                    <manifest>
	                        <mainClass>com.dms.devops.Application</mainClass>
	                    </manifest>
	                </archive>
	                <testFailureIgnore>true</testFailureIgnore>
	                <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
	                <forkCount>1</forkCount>
					<reuseForks>false</reuseForks>
	            </configuration>
	        </plugin>

        </plugins>

    </build>

</project>